--- a/TP/Makefile
+++ b/TP/Makefile
@@ -4,17 +4,16 @@ SRC = src
 OBJ = obj
 INC = include
 BIN = bin
-OBJS = $(OBJ)/main.o $(OBJ)/jogador.o $(OBJ)/mesaDePoker.o
-HDRS = $(INC)/msgassert.hpp $(INC)/cartaDeBaralho.hpp $(INC)/jogador.hpp $(INC)/mesaDePoker.hpp
+OBJS = $(OBJ)/main.o $(OBJ)/jogador.o $(OBJ)/mesaDePoker.o $(OBJ)/memlog.o
+HDRS = $(INC)/msgassert.hpp $(INC)/cartaDeBaralho.hpp $(INC)/jogador.hpp $(INC)/mesaDePoker.hpp $(INC)/memlog.hpp
 SANITIZE = -fsanitize=undefined,address
 CXXFLAGS = -Wall -c -I$(INC) -g $(SANITIZE)
 LDFLAGS = $(SANITIZE)
-MAIN = $(BIN)/main.exe
 
-EXE = $(BIN)/main.exe
+EXE = $(BIN)/pokerSim.exe
 
-$(MAIN): $(OBJS)
-	$(CXX) $(LDFLAGS) -o $(MAIN) $(OBJS) $(LIBS)
+$(EXE): $(OBJS)
+	$(CXX) $(LDFLAGS) -o $(EXE) $(OBJS) $(LIBS)
 
 $(OBJ)/main.o: $(HDRS) $(SRC)/main.cpp
 	$(CXX) $(CXXFLAGS) -o $(OBJ)/main.o $(SRC)/main.cpp 
@@ -24,6 +23,9 @@ $(OBJ)/jogador.o: $(HDRS) $(SRC)/jogador.cpp
 
 $(OBJ)/mesaDePoker.o: $(HDRS) $(SRC)/mesaDePoker.cpp
 	$(CXX) $(CXXFLAGS) -o $(OBJ)/mesaDePoker.o $(SRC)/mesaDePoker.cpp
+
+$(OBJ)/memlog.o: $(HDRS) $(SRC)/memlog.cpp
+	$(CXX) $(CXXFLAGS) -o $(OBJ)/memlog.o $(SRC)/memlog.cpp
 
 clean: 
 	rm -f $(EXE) $(OBJS) gmon.out
