--- a/TP/Makefile
+++ b/TP/Makefile
@@ -40,37 +40,74 @@ mem: $(EXE)
 	gnuplot $(REGMEM)/*.gp
 
 genload: $(GENLOAD)
-	$(GENLOAD) -o $(EXECFILES)/entrada1000rodadas.txt -r 1000 -j 4 -v 1
-	$(GENLOAD) -o $(EXECFILES)/entrada2000rodadas.txt -r 2000 -j 4 -v 1
-	$(GENLOAD) -o $(EXECFILES)/entrada3000rodadas.txt -r 3000 -j 4 -v 1
-	$(GENLOAD) -o $(EXECFILES)/entrada4000rodadas.txt -r 4000 -j 4 -v 1
-	$(GENLOAD) -o $(EXECFILES)/entrada5000rodadas.txt -r 5000 -j 4 -v 1
-	$(GENLOAD) -o $(EXECFILES)/entrada10jogadores.txt -r 5000 -j 5 -v 5
-	$(GENLOAD) -o $(EXECFILES)/entrada20jogadores.txt -r 5000 -j 15 -v 5
-	$(GENLOAD) -o $(EXECFILES)/entrada30jogadores.txt -r 5000 -j 25 -v 5
-	$(GENLOAD) -o $(EXECFILES)/entrada40jogadores.txt -r 5000 -j 35 -v 5
-	$(GENLOAD) -o $(EXECFILES)/entrada50jogadores.txt -r 5000 -j 45 -v 5
+	$(GENLOAD) -o $(EXECFILES)/entrada1000rodadas10jg.txt -r 1000 -j 10 -v 0
+	$(GENLOAD) -o $(EXECFILES)/entrada2000rodadas10jg.txt -r 2000 -j 10 -v 0
+	$(GENLOAD) -o $(EXECFILES)/entrada3000rodadas10jg.txt -r 3000 -j 10 -v 0
+	$(GENLOAD) -o $(EXECFILES)/entrada4000rodadas10jg.txt -r 4000 -j 10 -v 0
+	$(GENLOAD) -o $(EXECFILES)/entrada5000rodadas10jg.txt -r 5000 -j 10 -v 0
+
+	$(GENLOAD) -o $(EXECFILES)/entrada1000rodadas20jg.txt -r 1000 -j 20 -v 0
+	$(GENLOAD) -o $(EXECFILES)/entrada2000rodadas20jg.txt -r 2000 -j 20 -v 0
+	$(GENLOAD) -o $(EXECFILES)/entrada3000rodadas20jg.txt -r 3000 -j 20 -v 0
+	$(GENLOAD) -o $(EXECFILES)/entrada4000rodadas20jg.txt -r 4000 -j 20 -v 0
+	$(GENLOAD) -o $(EXECFILES)/entrada5000rodadas20jg.txt -r 5000 -j 20 -v 0
+
+	$(GENLOAD) -o $(EXECFILES)/entrada1000rodadas30jg.txt -r 1000 -j 30 -v 0
+	$(GENLOAD) -o $(EXECFILES)/entrada2000rodadas30jg.txt -r 2000 -j 30 -v 0
+	$(GENLOAD) -o $(EXECFILES)/entrada3000rodadas30jg.txt -r 3000 -j 30 -v 0
+	$(GENLOAD) -o $(EXECFILES)/entrada4000rodadas30jg.txt -r 4000 -j 30 -v 0
+	$(GENLOAD) -o $(EXECFILES)/entrada5000rodadas30jg.txt -r 5000 -j 30 -v 0
+
+	$(GENLOAD) -o $(EXECFILES)/entrada1000rodadas40jg.txt -r 1000 -j 40 -v 0
+	$(GENLOAD) -o $(EXECFILES)/entrada2000rodadas40jg.txt -r 2000 -j 40 -v 0
+	$(GENLOAD) -o $(EXECFILES)/entrada3000rodadas40jg.txt -r 3000 -j 40 -v 0
+	$(GENLOAD) -o $(EXECFILES)/entrada4000rodadas40jg.txt -r 4000 -j 40 -v 0
+	$(GENLOAD) -o $(EXECFILES)/entrada5000rodadas40jg.txt -r 5000 -j 40 -v 0
+
+	$(GENLOAD) -o $(EXECFILES)/entrada1000rodadas50jg.txt -r 1000 -j 50 -v 0
+	$(GENLOAD) -o $(EXECFILES)/entrada2000rodadas50jg.txt -r 2000 -j 50 -v 0
+	$(GENLOAD) -o $(EXECFILES)/entrada3000rodadas50jg.txt -r 3000 -j 50 -v 0
+	$(GENLOAD) -o $(EXECFILES)/entrada4000rodadas50jg.txt -r 4000 -j 50 -v 0
+	$(GENLOAD) -o $(EXECFILES)/entrada5000rodadas50jg.txt -r 5000 -j 50 -v 0
 
 perf: $(EXE)
-	$(EXE) -p $(REGPERF)/1000rodadas.out -i $(EXECFILES)/entrada1000rodadas.txt -o $(EXECFILES)/saida1000rodadas.txt
-	$(EXE) -p $(REGPERF)/2000rodadas.out -i $(EXECFILES)/entrada2000rodadas.txt -o $(EXECFILES)/saida2000rodadas.txt
-	$(EXE) -p $(REGPERF)/3000rodadas.out -i $(EXECFILES)/entrada3000rodadas.txt -o $(EXECFILES)/saida3000rodadas.txt
-	$(EXE) -p $(REGPERF)/4000rodadas.out -i $(EXECFILES)/entrada4000rodadas.txt -o $(EXECFILES)/saida4000rodadas.txt
-	$(EXE) -p $(REGPERF)/5000rodadas.out -i $(EXECFILES)/entrada5000rodadas.txt -o $(EXECFILES)/saida5000rodadas.txt
+	$(EXE) -p $(REGPERF)/1000rodadas10jg.out -i $(EXECFILES)/entrada1000rodadas10jg.txt -o $(EXECFILES)/saida1000rodadas10jg.txt
+	$(EXE) -p $(REGPERF)/2000rodadas10jg.out -i $(EXECFILES)/entrada2000rodadas10jg.txt -o $(EXECFILES)/saida2000rodadas10jg.txt
+	$(EXE) -p $(REGPERF)/3000rodadas10jg.out -i $(EXECFILES)/entrada3000rodadas10jg.txt -o $(EXECFILES)/saida3000rodadas10jg.txt
+	$(EXE) -p $(REGPERF)/4000rodadas10jg.out -i $(EXECFILES)/entrada4000rodadas10jg.txt -o $(EXECFILES)/saida4000rodadas10jg.txt
+	$(EXE) -p $(REGPERF)/5000rodadas10jg.out -i $(EXECFILES)/entrada5000rodadas10jg.txt -o $(EXECFILES)/saida5000rodadas10jg.txt
 
-	$(EXE) -p $(REGPERF)/10jogadores.out -i $(EXECFILES)/entrada10jogadores.txt -o $(EXECFILES)/saida10jogadores.txt
-	$(EXE) -p $(REGPERF)/20jogadores.out -i $(EXECFILES)/entrada20jogadores.txt -o $(EXECFILES)/saida20jogadores.txt
-	$(EXE) -p $(REGPERF)/30jogadores.out -i $(EXECFILES)/entrada30jogadores.txt -o $(EXECFILES)/saida30jogadores.txt
-	$(EXE) -p $(REGPERF)/40jogadores.out -i $(EXECFILES)/entrada40jogadores.txt -o $(EXECFILES)/saida40jogadores.txt
-	$(EXE) -p $(REGPERF)/50jogadores.out -i $(EXECFILES)/entrada50jogadores.txt -o $(EXECFILES)/saida50jogadores.txt
+	$(EXE) -p $(REGPERF)/1000rodadas20jg.out -i $(EXECFILES)/entrada1000rodadas20jg.txt -o $(EXECFILES)/saida1000rodadas20jg.txt
+	$(EXE) -p $(REGPERF)/2000rodadas20jg.out -i $(EXECFILES)/entrada2000rodadas20jg.txt -o $(EXECFILES)/saida2000rodadas20jg.txt
+	$(EXE) -p $(REGPERF)/3000rodadas20jg.out -i $(EXECFILES)/entrada3000rodadas20jg.txt -o $(EXECFILES)/saida3000rodadas20jg.txt
+	$(EXE) -p $(REGPERF)/4000rodadas20jg.out -i $(EXECFILES)/entrada4000rodadas20jg.txt -o $(EXECFILES)/saida4000rodadas20jg.txt
+	$(EXE) -p $(REGPERF)/5000rodadas20jg.out -i $(EXECFILES)/entrada5000rodadas20jg.txt -o $(EXECFILES)/saida5000rodadas20jg.txt
+	
+	$(EXE) -p $(REGPERF)/1000rodadas30jg.out -i $(EXECFILES)/entrada1000rodadas30jg.txt -o $(EXECFILES)/saida1000rodadas30jg.txt
+	$(EXE) -p $(REGPERF)/2000rodadas30jg.out -i $(EXECFILES)/entrada2000rodadas30jg.txt -o $(EXECFILES)/saida2000rodadas30jg.txt
+	$(EXE) -p $(REGPERF)/3000rodadas30jg.out -i $(EXECFILES)/entrada3000rodadas30jg.txt -o $(EXECFILES)/saida3000rodadas30jg.txt
+	$(EXE) -p $(REGPERF)/4000rodadas30jg.out -i $(EXECFILES)/entrada4000rodadas30jg.txt -o $(EXECFILES)/saida4000rodadas30jg.txt
+	$(EXE) -p $(REGPERF)/5000rodadas30jg.out -i $(EXECFILES)/entrada5000rodadas30jg.txt -o $(EXECFILES)/saida5000rodadas30jg.txt
+
+	$(EXE) -p $(REGPERF)/1000rodadas40jg.out -i $(EXECFILES)/entrada1000rodadas40jg.txt -o $(EXECFILES)/saida1000rodadas40jg.txt
+	$(EXE) -p $(REGPERF)/2000rodadas40jg.out -i $(EXECFILES)/entrada2000rodadas40jg.txt -o $(EXECFILES)/saida2000rodadas40jg.txt
+	$(EXE) -p $(REGPERF)/3000rodadas40jg.out -i $(EXECFILES)/entrada3000rodadas40jg.txt -o $(EXECFILES)/saida3000rodadas40jg.txt
+	$(EXE) -p $(REGPERF)/4000rodadas40jg.out -i $(EXECFILES)/entrada4000rodadas40jg.txt -o $(EXECFILES)/saida4000rodadas40jg.txt
+	$(EXE) -p $(REGPERF)/5000rodadas40jg.out -i $(EXECFILES)/entrada5000rodadas40jg.txt -o $(EXECFILES)/saida5000rodadas40jg.txt
+
+	$(EXE) -p $(REGPERF)/1000rodadas50jg.out -i $(EXECFILES)/entrada1000rodadas50jg.txt -o $(EXECFILES)/saida1000rodadas50jg.txt
+	$(EXE) -p $(REGPERF)/2000rodadas50jg.out -i $(EXECFILES)/entrada2000rodadas50jg.txt -o $(EXECFILES)/saida2000rodadas50jg.txt
+	$(EXE) -p $(REGPERF)/3000rodadas50jg.out -i $(EXECFILES)/entrada3000rodadas50jg.txt -o $(EXECFILES)/saida3000rodadas50jg.txt
+	$(EXE) -p $(REGPERF)/4000rodadas50jg.out -i $(EXECFILES)/entrada4000rodadas50jg.txt -o $(EXECFILES)/saida4000rodadas50jg.txt
+	$(EXE) -p $(REGPERF)/5000rodadas50jg.out -i $(EXECFILES)/entrada5000rodadas50jg.txt -o $(EXECFILES)/saida5000rodadas50jg.txt
 
 cleantemp: cleanperf cleanmem clean
 
 cleanperf:
-	rm -f $(REGPERF)/*.gp $(REGPERF)/*.gpdat $(REGPERF)/*.png $(REGPERF)/*.out
+	rm -f $(REGPERF)/*.png $(REGPERF)/*.out
 
 cleanmem:
-	rm -f $(REGMEM)/*.gp $(REGMEM)/*.gpdat $(REGMEM)/*.png $(REGMEM)/*.out
+	rm -f $(REGMEM)/*.gpdat $(REGMEM)/*.png $(REGMEM)/*.out
 
 clean: 
 	rm -f $(EXE) $(OBJS) gmon.out
